Fix main.right-col element spacing issues
Spacing in right-col rows fixed by moving from grid to flex with column
direction. Tidying other padding, margins and minor styling.

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ main {
 
       .card {
         background-color: white;
-        width: 290px;
+        width: 285px;
         height: 160px;
         border-radius: 8px;
         box-shadow: 0px 2px 5px grey;
@@ -254,10 +254,7 @@ main {
         flex-direction: column;
         justify-content: space-between;
         background: linear-gradient(90deg, var(--yellow-stripe) 0%, var(--yellow-stripe) 2%, white 2%, white 100%);
-        /* border: 6px solid white;x
-        border-left-color: aqua; */
-        /* border: 10px; */
-
+       
         .buttons {
           display: flex;
           justify-content: flex-end;
@@ -286,11 +283,13 @@ main {
   }
 
   & div.right-col.bottom-row {
-    display: grid;
-    grid-template-rows: auto 40px auto;
+    /* display: grid;
+    grid-template-rows: auto 40px auto; */
+    display: flex;
+    flex-direction: column;
 
     & div.title.trending {
-      align-self: flex-end;
+      /* align-self: flex-end; */
     }
   } 
 
@@ -298,8 +297,9 @@ main {
     background-color: white;
     box-shadow: 0px 2px 5px grey;
     border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 8px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
     height: auto;
     max-height: 280px;
 
@@ -307,11 +307,12 @@ main {
     & ul {
       list-style: none;
       padding: 0;
-      margin: 0 15px 0 15px;
+      margin: 0 15px 0 10px;
       height: calc(100% - 10px);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      overflow: scroll;
     }
     
     & li:first-child {
@@ -332,8 +333,12 @@ main {
       margin: 10px;
     }
     
+    &.announcements {
+      margin-bottom: 30px;
+    }
+
     &.trending {
-      margin-top: 13px;
+      margin-top: 14px;
       max-height: 220px;
 
       & div {
@@ -359,8 +364,9 @@ main {
         grid-column: 2 / 3;
         
         & p {
-          margin-top: 5px;
-          margin-bottom: 5px;
+          margin: 5px 0px 5px 5px;
+          /* margin-top: 5px;
+          margin-bottom: 5px; */
         }
           
         & p.handle {
